rolled back to before auth added, focus on validation only
