# routes/index.js
@@ -13,5 +13,6 @@ router.get('/', (req, res) => {
 
 router.use('/transactions', require('./transactions'));
 router.use('/users', require('./users'));
+router.use('/customers', require('./customers'));
 
 module.exports = router;
